// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
  <div
    className="list-buttons"
  >
    <CSVLink
      asyncOnClick={false}
      className="button button--csvlink"
      data={
        Array [
          Array [
            "description",
            "amount",
            "createdAt",
          ],
        ]
      }
      filename="text=_startDate=December 31st, 1969_endDate=December 31st, 1969.csv"
      separator=","
      target="_blank"
      uFEFF={true}
    >
      Download
    </CSVLink>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={195}
      category="Bills"
      color="f7f7f7"
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      category="Restaurants"
      color="000000"
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={4500}
      category="Charity"
      color="ffffff"
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      note=""
    />
  </div>
  <div
    className="list-buttons"
  >
    <CSVLink
      asyncOnClick={false}
      className="button button--csvlink"
      data={
        Array [
          Array [
            "description",
            "amount",
            "createdAt",
          ],
          Array [
            "Gum",
            "$1.95",
            "December 31st, 1969",
          ],
          Array [
            "Rent",
            "$1,095.00",
            "December 27th, 1969",
          ],
          Array [
            "Credit Card",
            "$45.00",
            "January 4th, 1970",
          ],
        ]
      }
      filename="text=_startDate=December 31st, 1969_endDate=December 31st, 1969.csv"
      separator=","
      target="_blank"
      uFEFF={true}
    >
      Download
    </CSVLink>
  </div>
</div>
`;
